--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,6 +23,11 @@
         <h1 class="text-xl font-semibold leading-tight">
             To get started, first enter your phone, email, or @username
         </h1>
+        <% if(error) { %>
+            <small class="text-red-500">
+                <%= error %>
+            </small>
+        <% } %>
         <form autocomplete="off" action="/login" method="post">
             <input name="username" type="text" placeholder="Phone, email, or username"
                 class="w-full bg-transparent border-b border-gray-500 text-white placeholder-gray-500 focus:outline-none py-2 text-lg" />
